Fix T63046, T61413: crash reading paint slots from 32 bit .blend on 64 bit

Thanks to matc for helping to find this, it was writing the paint slots wrong.